Undo z-index fix because it breaks the slider

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -101,7 +101,6 @@ section {
 
 #projects-wrap {
     position:relative;
-    z-index:10;
 }
 
 #home:before, #about:before, #projects:before, #posts:before, #contact:before {
